--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       // compilerOptions specified here will override those declared below,
       // but *only* in ts-node.  Useful if you want ts-node and tsc to use
       // different options with a single tsconfig.json.
+      "target": "ES2022",
       "module": "ESNext",
       "lib": ["es6"]
     }
