--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fastify/type-provider-typebox": "^2.4.0",
     "@sinclair/typebox": "^0.25.2",
+    "class-transformer": "^0.5.1",
     "fastify": "^4.9.2",
     "mqtt": "^4.3.7",
     "nanoid": "^4.0.0",
