--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fastify/type-provider-typebox": "^2.4.0",
     "@sinclair/typebox": "^0.25.2",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "fastify": "^4.9.2",
     "mqtt": "^4.3.7",
     "nanoid": "^4.0.0",
